--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,6 +10,15 @@ ENV APP_ENV $app_env
 COPY . /go/src/github.com/user/GoDoRP/api
 WORKDIR /go/src/github.com/user/GoDoRP/api
 
+# Install Java/Python/LaTeX and script dependencies
+RUN apt-get update && apt-get -y install wget unzip imagemagick default-jre default-jdk python python-pip python-tk latexmk texlive-latex-extra texlive-humanities
+RUN pip install nltk pylatex
+RUN python -m nltk.downloader punkt
+# RUN mkdir /usr/local/share/texmf/tex
+RUN mkdir -p /usr/local/share/texmf/tex/latex
+RUN cd /tmp && wget http://mirrors.ctan.org/graphics/pgf/contrib/tikz-qtree.zip && unzip tikz-qtree.zip -d /usr/local/share/texmf/tex/latex
+RUN texhash && mktexlsr
+
 # added vendor services will need to be included here
 RUN go get ./vendor/database
 
@@ -25,5 +34,5 @@ CMD if [ ${APP_ENV} = production ]; \
 	go get github.com/pilu/fresh && \
 	fresh; \
 	fi
-	
+
 EXPOSE 8080
