--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "react-scripts": "0.9.0",
-    "python-shell": "0.4.0",
-    "child_process": "1.0.2"
+    "react-scripts": "0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
