--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       args:
         app_env: ${APP_ENV}
     volumes:
-      - ./api:/go/src/github.com/user/GoDoRP/api
+      - ./api:/go/src/github.com/user/treeGenerator/api
     ports:
       - "443:8080"
     links:
