--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GoDoRP_frontend",
+  "name": "treeGenerator_frontend",
   "version": "0.1.0",
   "dependencies": {
     "axios": "^0.15.3",
